--- a/ML Dissertation/LogReg/LR_Server_NB.ipynb
+++ b/ML Dissertation/LogReg/LR_Server_NB.ipynb
@@ -9,11 +9,12 @@
     "import flwr as fl\n",
     "import LR_Utils as utils\n",
     "from flwr.common import NDArrays, Scalar\n",
-    "from sklearn.metrics import log_loss\n",
-    "from sklearn import metrics \n",
+    "from sklearn.metrics import log_loss, ConfusionMatrixDisplay\n",
+    "from sklearn import metrics\n",
     "import pandas as pd\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from typing import Tuple, Dict, Optional"
+    "from typing import Tuple, Dict, Optional\n",
+    "import numpy as np"
    ]
   },
   {
@@ -36,17 +37,17 @@
     "def get_evaluate_fn(model: LogisticRegression):\n",
     "    \"\"\"Return an evaluation function for server-side evaluation.\"\"\"\n",
     "\n",
-    "    _, (X_test, y_test) = utils.load_Data()\n",
+    "    (X_train,y_train),(X_test, y_test) = utils.load_Data()\n",
     "\n",
     "    def evaluate(\n",
     "        server_round: int, parameters: NDArrays, config: Dict[str, Scalar]\n",
     "    ) -> Optional[Tuple[float, Dict[str, Scalar]]]:\n",
     "        utils.set_model_params(model, parameters)\n",
-    "        loss = log_loss(y_test, model.predict_proba(X_test))\n",
+    "        #loss = log_loss(y_test, X_test)\n",
     "        accuracy = model.score(X_test, y_test)\n",
-    "        return ({\"Sever Loss\":loss}, {\"Server Accuracy\": accuracy})\n",
+    "        return {\"Server Accuracy\": accuracy}\n",
     "        \n",
-    "    return evaluate\n"
+    "    return evaluate"
    ]
   },
   {
@@ -84,283 +85,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainDF = pd.read_csv(r\"C:\\Users\\adamc\\Work\\HomeLab\\ML Dissertation\\Datasets\\UNSW-NB15\\UNSW_NB15_training-set.csv\")\n",
-    "testDF = pd.read_csv(r\"C:\\Users\\adamc\\Work\\HomeLab\\ML Dissertation\\Datasets\\UNSW-NB15\\UNSW_NB15_testing-set.csv\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainDF.shape\n",
-    "\n",
-    "testDF.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainDF = trainDF.dropna()\n",
-    "trainDF = trainDF.drop_duplicates()\n",
-    "\n",
-    "testDF = testDF.dropna()\n",
-    "testDF = testDF.drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Removing Redundant Columns\n",
-    "trainDF = trainDF.drop(columns='id')\n",
-    "trainDF = trainDF.drop(columns='label')\n",
-    "\n",
-    "testDF = testDF.drop(columns='id')\n",
-    "testDF = testDF.drop(columns='label')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainDF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Import one hot encoder from sklearn\n",
-    "\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "\n",
-    "enc = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
-    "enc.fit(trainDF[['proto','service','state','attack_cat']])  # Fit encoder on training data\n",
-    "\n",
-    "train_encoded = enc.transform(trainDF[['proto','service','state','attack_cat']])\n",
-    "test_encoded = enc.transform(testDF[['proto','service','state','attack_cat']])\n",
-    "\n",
-    "# Replace 'proto','service','state','attack_cat' column with encoded data\n",
-    "trainDF = pd.concat([trainDF.drop(['proto','service','state','attack_cat'], axis=1), pd.DataFrame(train_encoded, columns=enc.get_feature_names_out(['proto','service','state','attack_cat']))], axis=1)\n",
-    "testDF = pd.concat([testDF.drop(['proto','service','state','attack_cat'], axis=1), pd.DataFrame(test_encoded, columns=enc.get_feature_names_out(['proto','service','state','attack_cat']))], axis=1)\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainDF.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create classes variable listing all outcomes of dataset\n",
-    "class_name = ['attack_cat_Analysis',\n",
-    " 'attack_cat_Backdoor',\n",
-    " 'attack_cat_DoS',\n",
-    " 'attack_cat_Exploits',\n",
-    " 'attack_cat_Fuzzers',\n",
-    " 'attack_cat_Generic',\n",
-    " 'attack_cat_Normal',\n",
-    " 'attack_cat_Reconnaissance',\n",
-    " 'attack_cat_Shellcode',\n",
-    " 'attack_cat_Worms']\n",
-    "# Select everything other than classes\n",
-    "x_train = trainDF.drop(columns=class_name)\n",
-    "x_test = testDF.drop(columns=class_name)\n",
-    "# Select only classes\n",
-    "y_test = testDF[class_name]\n",
-    "y_train = trainDF[class_name]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainDF.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "y_test = np.argmax(y_test,axis=1)\n",
-    "y_train = np.argmax(y_train,axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unique, counts = np.unique(y_test, return_counts=True)\n",
-    "print(\"Unique values:\", unique)\n",
-    "print(\"Counts:\", counts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainDF.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testDF.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_columns = [col for col in trainDF.columns if col.startswith('attack_cat')]\n",
-    "target_columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Imports minmaxscaler to normalise (Scale) data\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "scaler = MinMaxScaler()\n",
-    "\n",
-    "scaler.fit(trainDF)\n",
-    "\n",
-    "trainDF = scaler.transform(trainDF)\n",
-    "testDF = scaler.transform(testDF)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainDF"
-   ]
   }
  ],
  "metadata": {
